# FastAPI-REST-app

./: .gitignore  README.md  movies.db  pyproject.toml  requirements.txt
basic_rest_api_app/: crud.py  database.py  imdb_scraper.py  main.py  models.py  schemas.py
src/: crud.py  data_loader.py  imdb_scraper.py  main.py  models.py  schemas.py
