[tool.poetry]
name = "basic-rest-api-app"
version = "0.1.0"
description = "This is test for a basic python rest api application."
authors = ["Peter Hegedus <peter_hegedus3@epam.com>"]
readme = "README.md"
packages = [{include = "basic_rest_api_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
bs4 = "^0.0.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
